<resources>
    <string name="app_name">Memory</string>
    <string name="action_restart">Restart</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-3649361103885562/6696223736</string>


    <string name="best_score">Best Score</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
</resources>
