<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/app_name"
        android:background="@color/colorAccent"
        android:elevation="4dp">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_best_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_score"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="35"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_play1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_play2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_play3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

</LinearLayout>
